Events Changelog
================

Here you can see the full list of changes between each Events release.

Version 0.2.1
-------------

Not released yet.

- Prevent overriding of '__' attributes (Petr Jašek).

Version 0.2.0
-------------

Released on September 22 2013.

- Fixed a minor encoding issue which made installing on Windows/Python3
  impossible (Eric Smith).

Version 0.1.0
-------------

Released on March 13 2013.

First public release.