@@ -1,6 +1,11 @@
 language: python
-python:
-  - "2.6"
-  - "2.7"
-  - "3.3"
-script: python setup.py test
+python: 2.7
+env:
+  - TOX_ENV=py26
+  - TOX_ENV=py27
+  - TOX_ENV=py33
+  - TOX_ENV=py34
+  - TOX_ENV=flake8
+install: pip install tox
+script: 
+  - tox -e $TOX_ENV
