@@ -9,7 +9,7 @@ lower protocol layers need to inform upper layers of incoming data and the
 like. Here is a handy class that encapsulates the core to event subscription
 and event firing and feels like a "natural" part of the language.
 
-The package has been tested under Python 2.6, Python 2.7 and Python 3.3.
+The package has been tested under Python 2.6, 2.7, 3.3 and 3.4.
 
 Usage
 =====
