@@ -1,0 +1,9 @@
+[tox]
+envlist=py26,py27,py33,py34,flake8
+
+[testenv]
+commands=python setup.py test
+
+[testenv:flake8]
+deps=flake8
+commands=flake8 events
